Wrap Sidebar in fixed div.

--- a/src/style/resume.css
+++ b/src/style/resume.css
@@ -25,3 +25,7 @@ body {
     font-weight: normal;
     font-style: normal;
 }
+
+#sidebar-fixed {
+  position: fixed;
+}
